2013-03-26  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-elf32.sh, build-uclibc.sh: Use release specific build
	directory names.

2013-03-26  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* run-elf32-tests.sh: Replace bd_elf_gdb with bd_elf throughout.

2013-03-25  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-elf32.sh: Build GDB.
	* build-linux.sh: Ensure we have the right tool chain on the path.
	* build-uclibc.sh: Tidy up commenting.
	* dejagnu/baseboards/arc-linux-generic.exp: Set up sysroot command
	file.
	* dejagnu/ftp-extra.exp (make_relative): Correct typo for prefix.
	(ftp_download): Silently ignore long remote file names.
	* dejagnu/telnet-extra.exp (telnet_close): Correct logic.
	(telnet_exec): Tidy up details of proc.
	(telnet_spawn_open): New proc.
	(telnet_spawn): Rewrite logic of proc.
	* run-uclibc-tests.sh (ARC_GDB_COMMFILE): Create command file for
	GDB tests.

2013-03-18  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Add --big-endian to help.

2013-03-15  Vineet Gupta <vgupta@synopsys.com>

	* build-uclibc.sh: Allow a defconfig based uClibc build
	Do a distclean and also increase the verbosity

2013-03-15  Vineet Gupta <vgupta@synopsys.com>

	* build-uclibc.sh: No need to copy Linux sources

2013-02-21  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-linux-generic.exp: Move extra file loads to after the main
	config file is loaded. Add gdb-extra.exp. Mark as using GDB stub.
	* ftp-extra.exp: Use filename from before transfer to change mode
	and return result.
	* gdb-extra.exp: Created.

2013-02-20  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/baseboards/arc-linux-aa4.exp: Move most gdbserver config
	to arc-linux-generic.exp
	* dejagnu/baseboards/arc-linux-nsim.exp: Likewise.
	* dejagnu/baseboards/arc-linux-generic.exp: Set most gdbserver
	config.

2013-02-20  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/baseboards/arc-linux-nsim.exp: Correct code accidentally
	introduced.
