@@ -51,10 +51,6 @@ mkdir -p ${ARC_GNU}/results
 export DEJAGNU=${ARC_GNU}/toolchain/site.exp
 echo "Running elf32 tests"
 
-# Set the build directories
-bd_elf=${ARC_GNU}/bd-elf32
-bd_elf_gdb=${ARC_GNU}/bd-elf32-gdb
-
 # Create the ELF log file and results directory
 logfile_elf="$(echo "${ARC_GNU}")/logs/elf32-check-$(date -u +%F-%H%M).log"
 rm -f "${logfile_elf}"
@@ -66,9 +62,15 @@ mkdir ${res_elf}
 if [ "${ARC_ENDIAN}" = "little" ]
 then
     target_dir=arc-elf32
+    bd_elf=${ARC_GNU}/bd-4.4-elf32
+    bd_elf_gdb=${ARC_GNU}/bd-4.4-elf32-gdb
 else
 #    target_dir=arceb-elf32
+#    bd_elf=${ARC_GNU}/bd-4.4-elf32eb
+#    bd_elf_gdb=${ARC_GNU}/bd-4.4-elf32eb-gdb
     target_dir=arc-elf32
+    bd_elf=${ARC_GNU}/bd-4.4-elf32
+    bd_elf_gdb=${ARC_GNU}/bd-4.4-elf32-gdb
 fi
 
 # The target board to use
