@@ -1,5 +1,10 @@
 2013-03-26  Jeremy Bennett <jeremy.bennett@embecosm.com>
 
+	* run-elf32-tests.sh, run-uclibc-tests.sh: Make build directories
+	endian and tool chain release specific.
+
+2013-03-26  Jeremy Bennett <jeremy.bennett@embecosm.com>
+
 	* build-elf32.sh, build-uclibc.sh: Use release specific build
 	directory names.
 
